--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -1,4 +1,5 @@
-  <div class="container">
+<div class="container">
+    {{ .Content }}
     {{ if .Site.Params.showBlogHeader }}
       <div class="row">
         <header>
