check whether mailmunchid is set

--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -1,4 +1,4 @@
-{{ if ne .Site.Params.mailmunchid "" }}
+{{ if and (isset .Site.Params "mailmunchid") (ne .Site.Params.mailmunchid "") }}
 <!-- MailMunch  -->
 <script src="//s3.amazonaws.com/mailmunch/static/site.js" id="mailmunch-script" data-mailmunch-site-id="{{ .Site.Params.mailmunchid }}" async="async"></script>
 {{ end }}
