--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -2,7 +2,7 @@
 <!-- MailMunch  -->
 <script src="//s3.amazonaws.com/mailmunch/static/site.js" id="mailmunch-script" data-mailmunch-site-id="{{ .Site.Params.mailmunchid }}" async="async"></script>
 {{ end }}
-{{ if ne .Site.Params.sumomeid "" }}
+{{ if and (isset .Site.Params "sumomeid") (ne .Site.Params.sumomeid "") }}
 <!-- sumome -->
 <script src="//load.sumome.com/" data-sumo-site-id="{{ .Site.Params.sumomeid }}" async="async"></script>
 {{ end }}
