prefer relative to BrandImage

--- a/layouts/partials/base/header.html
+++ b/layouts/partials/base/header.html
@@ -14,7 +14,7 @@
         {{- end }}
         {{ if ( ne .Site.Params.BrandImage "" ) -}}
         <a class="navbar-brand-img" href="{{ .Site.BaseURL | relLangURL}}">
-          <img alt="{{ .Site.Params.brand }}" src="{{ .Site.Params.BrandImage }}">
+          <img alt="{{ .Site.Params.brand }}" src="{{ .Site.Params.BrandImage | relURL }}">
         </a>
         {{- end }}
         </div>
