--- a/layouts/partials/base/metas.html
+++ b/layouts/partials/base/metas.html
@@ -12,12 +12,10 @@
 {{ with .Site.Params.googleplus }}
 <link rel="author" href="http://plus.google.com/+{{ . }}">
 {{ end }}
-
 <meta property="og:title" content="{{ .Title }} {{ if ne .Title .Site.Title }} &middot; {{ .Site.Title }} {{ end }}">
 <meta property="og:site_name" content="{{ .Site.Title }}"/>
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:locale" content="{{ .Site.LanguageCode }}">
-
 {{ if not .IsPage }}
 <meta property="og:type" content="website" />
 {{ else }}
@@ -25,18 +23,16 @@
 <meta property="og:description" content="{{ .Description }}"/>
 <meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
 <meta property="og:article:modified_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
-
-  {{ if .Keywords }}
+{{ if .Keywords -}}
     {{ range .Keywords }}
 <meta property="og:article:tag" content="{{ . }}">
-    {{ end }}
-  {{ else if isset .Params "tags" }}
+{{- end }}
+{{ else if isset .Params "tags" -}}
     {{ range .Params.tags }}
 <meta property="og:article:tag" content="{{ . }}">
-    {{ end }}
-  {{ end }}
-
-  {{ if ne .Site.Params.twitter "" }}
+{{- end }}
+{{- end }}
+{{ if ne .Site.Params.twitter "" -}}
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
 <meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
@@ -44,9 +40,8 @@
 <meta name="twitter:description" content="{{ .Description }}" />
 <meta name="twitter:url" content="{{ .Permalink }}" />
 <meta name="twitter:domain" content="{{ .Site.BaseURL }}">
-  {{ end }}
-
-  {{ if ne .Site.Params.googleplus "" }}
+{{- end }}
+{{ if ne .Site.Params.googleplus "" -}}
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
@@ -61,12 +56,11 @@
     "wordCount": {{ .WordCount }}
   }
 </script>
-  {{ end }}
-{{ end }}
-
-{{ if .RSSLink }}
+{{- end }}
+{{- end }}
+{{ if .RSSLink -}}
 <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />
-{{ end }}
+{{- end }}
 <link rel="canonical" href="{{ .Permalink }}" />
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/touch-icon-144-precomposed.png">
 <link rel="icon" href="/favicon.png">
