--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -1,33 +1,30 @@
-{{ if and (isset .Site.Params "mailmunchid") (ne .Site.Params.mailmunchid "") }}
+{{ if and (isset .Site.Params "mailmunchid") (ne .Site.Params.mailmunchid "") -}}
 <!-- MailMunch  -->
 <script src="//s3.amazonaws.com/mailmunch/static/site.js" id="mailmunch-script" data-mailmunch-site-id="{{ .Site.Params.mailmunchid }}" async="async"></script>
-{{ end }}
-{{ if and (isset .Site.Params "sumomeid") (ne .Site.Params.sumomeid "") }}
+{{- end }}
+{{ if and (isset .Site.Params "sumomeid") (ne .Site.Params.sumomeid "") -}}
 <!-- sumome -->
 <script src="//load.sumome.com/" data-sumo-site-id="{{ .Site.Params.sumomeid }}" async="async"></script>
-{{ end }}
-
-{{ .Scratch.Add "js" (slice (resources.Get "js/jquery.min.js"))}}
-{{ .Scratch.Add "js" (slice (resources.Get "js/bootstrap.min.js"))}}
-
-{{ if eq .Site.Params.switchlang true }}
+{{- end }}
+{{ .Scratch.Add "js" (slice (resources.Get "js/jquery.min.js")) }}
+{{ .Scratch.Add "js" (slice (resources.Get "js/bootstrap.min.js")) }}
+{{ if eq .Site.Params.switchlang true -}}
     {{ .Scratch.Add "js" (slice (resources.Get "js/js.cookie.js"))}}
-{{ end }}
-{{ if eq .Site.Params.popover.enablepopover true}}
+{{- end }}
+{{ if eq .Site.Params.popover.enablepopover true -}}
     {{ .Scratch.Add "js" (slice (resources.Get "js/angular.min.js"))}}
     {{ .Scratch.Add "js" (slice (resources.Get "js/popover/angular-storage.min.js"))}}
-{{ end }}
-{{ .Scratch.Add "js" (slice (resources.Get "js/highlight.pack.js"))}}
-{{ .Scratch.Add "js" (slice (resources.Get "js/site.js"))}}
-
-{{ with .Site.Params.googleAnalytics }}
+{{- end }}
+{{ .Scratch.Add "js" (slice (resources.Get "js/highlight.pack.js")) }}
+{{ .Scratch.Add "js" (slice (resources.Get "js/site.js")) }}
+{{ with .Site.Params.googleAnalytics -}}
 <script>
   var _gaq=[['_setAccount','{{ . }}'],['_trackPageview']];
   (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
   g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
   s.parentNode.insertBefore(g,s)}(document,'script'));
 </script>
-{{ end }}
+{{- end }}
 <script>
 var ENABLE_POPOVER = {{.Site.Params.popover.enablepopover}}, // enable or disable popover: true/false.
 EXPIRE_COOKIE = {{.Site.Params.popover.expirecookie}}, // show it again after number of days to visitor that has not subscribed.
@@ -47,30 +44,25 @@ OPTIN = {{.Site.Params.popover.optin}},
 COOKIE_NAME = {{.Site.Params.popover.cookiename}},
 CONTENTLANGUAGE = {{ .Site.Params.DefaultContentLanguage }}; // used in pathnamereplace.js
 </script>
-{{ if eq .Site.Params.switchlang true }}
+{{ if eq .Site.Params.switchlang true -}}
     {{ .Scratch.Add "js" (slice (resources.Get "js/pathnamereplace.js"))}}
-{{ end }}
-
-{{ if eq .Site.Params.popover.enablepopover true }}
+{{- end }}
+{{ if eq .Site.Params.popover.enablepopover true -}}
     {{ .Scratch.Add "js" (slice (resources.Get "js/popover/angular-modal-service.min.js"))}}
     {{ .Scratch.Add "js" (slice (resources.Get "js/angular-ismobile.min.js"))}}
     {{ .Scratch.Add "js" (slice (resources.Get "js/popover/popover.min.js"))}}
-{{ end }}
-
-{{ range .Site.Params.customJS }}
+{{- end }}
+{{ range .Site.Params.customJS -}}
     {{ $.Scratch.Add "js" (slice (resources.Get .))}}
-{{ end }}
-
+{{- end }}
 {{ $js := .Scratch.Get "js" | resources.Concat "js/bundle.js" | resources.Minify| resources.Fingerprint "sha512" }}
 <script  src="{{ $js.Permalink | relURL }}" integrity="{{ $js.Data.Integrity }}"></script>
-
-
-{{ if ne .Site.Params.mathjax "" }}
+{{ if ne .Site.Params.mathjax "" -}}
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/{{.Site.Params.mathjax}}/MathJax.js"></script>
 <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/{{.Site.Params.mathjax}}/config/TeX-AMS-MML_HTMLorMML.js"></script>
-
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/{{.Site.Params.mathjax}}/config/TeX-AMS-MML_HTMLorMML.js">
+</script>
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   tex2jax: {
@@ -84,7 +76,6 @@ MathJax.Hub.Config({
   }
 });
 </script>
-
 <script type="text/x-mathjax-config">
   MathJax.Hub.Queue(function() {
     for(var all in MathJax.Hub.getAllJax()) {
@@ -93,4 +84,4 @@ MathJax.Hub.Config({
     }
 });
 </script>
-{{ end }}
+{{- end }}
