--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,4 +1,4 @@
-{{ partial "base/footer.html" . }}
-{{ partial "base/scripts.html" . }}
+{{ partial "base/footer.html" . -}}
+{{ partial "base/scripts.html" . -}}
 </body>
 </html>
