--- a/layouts/partials/base/header.html
+++ b/layouts/partials/base/header.html
@@ -30,28 +30,28 @@
               <li class="{{ if $currentNode.IsMenuCurrent "main" . }}active{{ end }}">
                 <a href="{{ .URL }}">{{ .Pre }} {{ .Name }}</a>
               </li>
-              {{ end }}
+              {{- end }}
             </ul>
-            {{ else }}
+            {{ else -}}
             <a href="{{ .URL | absLangURL }}" {{ if and ( isset . "Name" ) ( ne .Name "" ) }} title="{{ .Name }}"{{ end }}>
               {{ .Pre }}
               {{ .Name }}
             </a>
-            {{end}}
+            {{- end }}
           </li>
-          {{ end }}
+          {{- end }}
           <!-- switch language -->
-          {{ if eq .Site.Params.switchlang true }}
-          {{ $currentNode := . }}
-          {{ range .Site.Menus.switchlang }}
+          {{ if eq .Site.Params.switchlang true -}}
+          {{ $currentNode := . -}}
+          {{ range .Site.Menus.switchlang -}}
           <li class="{{if $currentNode.IsMenuCurrent "main" . }}active{{end}}">
             <a href="javascript:changeLanguage('{{ .URL | markdownify }}');" {{ if and ( isset . "Name" ) ( ne .Name "" ) }} title="{{ .Name }}"{{ end }}>
               {{ .Pre }}
               {{ .Name }}
             </a>
           </li>
-          {{ end }}
-          {{ end }}  
+          {{- end }}
+          {{- end }}  
         </ul>
       </div>
       <!--/.nav-collapse -->
