--- a/layouts/partials/modules/site/footline.html
+++ b/layouts/partials/modules/site/footline.html
@@ -1,3 +1,3 @@
-{{ with .Site.Params.footline }}
-  {{ . | markdownify }}
-{{ end }}
+{{- with .Site.Params.footline -}}
+{{ . | markdownify -}}
+{{- end }}
