--- a/layouts/partials/base/footer.html
+++ b/layouts/partials/base/footer.html
@@ -7,7 +7,8 @@
         {{ partial "bloc/footer/nav.html" . }}
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-        {{ partial "bloc/footer/credits.html" . }}
+        {{- partial "bloc/footer/credits_footline.html" . -}}
+        {{- partial "bloc/footer/credits_copyright.html" . }}
       </div>
     </div>
   </div>
